Fixed overflow on modal.

--- a/Assets/SCSS/code-examples.scss
+++ b/Assets/SCSS/code-examples.scss
@@ -118,7 +118,7 @@ main {
         top: 0;
         width: calc(100% - 200px);
         height: 100%;
-        overflow: auto;
+        overflow: hidden;
         background-color: black;
         &-content {
             position: relative;
